--- a/island.html
+++ b/island.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 <html lang+"en-US">
-  
+<head>
+  <title>Island Resort Project</title>
+</head>
+<body>
+  <h1>Stonely Luxury Resort</h1>
+  <img src="main-resort-pic.jpg" alt="picture of resort pool">
+  <h2>Let us worry about everything!</h2>
+  <p>
+    <a href="arrangements.html">Travel Arrangements</a>
+    <a href="accomodations.html">Accomodations</a>
+    <a href="activities.html">Activities</a>
+    <a href="pictures.html">Pictures</a>
+    <a href="contact.html">Contact Us</a>
+  </p>
+</body>
 </html>
