added accomodations code

--- a/accomodations.html
+++ b/accomodations.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html lang+"en-US">
-  
+<head>
+  <title>Accomodations</title>
+</head>
+<body>
+  <h1>Choose your resting quarters here!</h1>  
+  <img src="hotel.jpg" alt="picture of hotel room">
+  <p>How many of you are staying?<input type="number"></p>
+  <p>How many beds would you like?<input type="number"></p>
+  <p>Would you like a balcony?<input type="checkbox">Yes Please!</p>
+  <p>You deserve an all inclusive package!<input type="checkbox"> Yes I do!!</p>
+</body>
 </html>
