added activities and img

--- a/activities.html
+++ b/activities.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
 <html lang+"en-US">
-  
+<head>
+  <title>Activities</title>
+</head>
+<body>
+  <h1>There is so much to do!</h1>
+  <img src="horses.jpg" alt="picture of horses on the beach">
+  <p>
+    <ul>
+      <li>Horseback riding</li>
+      <li>Golf up to 18 holes</li>
+      <li>Snorkeling</li>
+      <li>Karoake</li>
+      <li>Live Shows</li>
+    </ul>
+  </p>
+  <p>Please contact us to make reservations for activities</p>
+  <a href="contact.html">Contact Us</a> 
+</body>
 </html>
