added pictures page and imgs

--- a/pictures.html
+++ b/pictures.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html lang+"en-US">
-  
+<head>
+  <title>Pictures</title>
+</head>
+<body>
+  <div>
+    <img src="resort1.jpg" alt="picture of a golf course">
+  </div>
+  <div>
+    <img src="resort2.jpg" alt="picture of a bar">
+  </div>  
+  <div>
+    <img src="resort3.jpg" alt="picture of snorkelers">
+  </div>
+  <div>
+    <img src="resort4.jpg" alt="picture of a beach">
+  </div>
+</body>
 </html>
