added blank targets to all hrefs

--- a/activities.html
+++ b/activities.html
@@ -16,6 +16,6 @@
     </ul>
   </p>
   <p>Please contact us to make reservations for activities</p>
-  <a href="contact.html">Contact Us</a> 
+  <a href="contact.html" target="_blank">Contact Us</a> 
 </body>
 </html>
