--- a/island.html
+++ b/island.html
@@ -8,11 +8,11 @@
   <img src="main-resort-pic.jpg" alt="picture of resort pool">
   <h2>Let us worry about everything!</h2>
   <p>
-    <a href="arrangements.html">Travel Arrangements</a>
-    <a href="accomodations.html">Accomodations</a>
-    <a href="activities.html">Activities</a>
-    <a href="pictures.html">Pictures</a>
-    <a href="contact.html">Contact Us</a>
+    <a href="arrangements.html" target="_blank">Travel Arrangements</a>
+    <a href="accomodations.html" target="_blank">Accomodations</a>
+    <a href="activities.html" target="_blank">Activities</a>
+    <a href="pictures.html" target="_blank">Pictures</a>
+    <a href="contact.html" target="_blank">Contact Us</a>
   </p>
 </body>
 </html>
