--- a/accomodations.html
+++ b/accomodations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
+  <link href="main.css" rel="stylesheet">
   <title>Accomodations</title>
 </head>
 <body>
