--- a/activities.html
+++ b/activities.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
+  <link href="main.css" rel="stylesheet">
   <title>Activities</title>
 </head>
 <body>
