--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
+  <link href="main.css" rel="stylesheet">
   <title>Contact Us</title>
 </head>
 <body>
   <h1>Choose your contact preference!</h1>
   <p>Email us!</p>
-   <input type="text" id="text-box">
+   <input type="text" size="200" id="text">
    <p>Give us a call at 1-866-123-4567</p>
    <p>Check us out on <img src="twitter.jpg" alt="twitter logo" id="twitter"> @StonelyLuxResort</p>
 </body>
