--- a/island.html
+++ b/island.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
+  <link href="main.css" rel="stylesheet">
   <title>Island Resort Project</title>
 </head>
 <body>
