--- a/activities.html
+++ b/activities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
-  <link href="main.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <title>Activities</title>
 </head>
 <body>
