fix mistake again

--- a/arrangements.html
+++ b/arrangements.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Travel Arrangements</title>
 </head>
 <body>
   <!--Shuttle-->
-  <h2>Let us take care of all the travel arrangements!</h2>
+  <h1>Let us take care of all the travel arrangements!</h1>
   <p>We offer 24 hour shuttles to all nearby atttractions</p>
   <img src="Shuttle.jpg" alt="picture of a shuttle">
   <p><input type="datetime-local"></p>
