--- a/island.html
+++ b/island.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Island Resort Project</title>
 </head>
 <body>
