--- a/pictures.html
+++ b/pictures.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en-US">
 <head>
-  <link href="main.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Pictures</title>
 </head>
 <body>
