fixed some formatting issues and styling conflicts

--- a/activities.html
+++ b/activities.html
@@ -12,7 +12,7 @@
       <li>Horseback riding</li>
       <li>Golf up to 18 holes</li>
       <li>Snorkeling</li>
-      <li>Karoake</li>
+      <li>Karaoke</li>
       <li>Live Shows</li>
     </ul>
   </p>
