Add a New Island option

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="pictures.html" target="_blank">Pictures</a>
     <a href="contact.html" target="_blank">Contact Us</a>
   </p>
+  <p><a class='fireLink'href="newIsland.html">Another Option</a></p>
 </body>
 </html>
